Updated Music Page

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <section class="container" id="blogs">
             <div class="blogs-content">
                 <div class="main-title">
-                    <h2>My <span>Blogs</span><span class="bg-text">My Music</span></h2>
+                    <h2>My <span>Music</span><span class="bg-text">My Music</span></h2>
                 </div>
                 <div class="blogs">
                     <div class="blog">
