Updated Music icon Home Page

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         <i class="fa-solid fa-book-open"></i>
       </div>
       <div class="control control-4 " data-id="blogs">
-        <i class="fa-solid fa-code"></i>
+        <i class="fa-solid fa-music"></i>
       </div>
       <div class="control control-5 " data-id="contact">
         <i class="fa-solid fa-mobile"></i>
