update music - added links/thumbs

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         <img src="img/music_thumb.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                T Y T Y
+                                BRUTUS
                             </h4>
                             <p>
                                <a href="https://soundcloud.com/tytytyty_bass/brutus">Click here for Soundcloud link!</a>
@@ -349,13 +349,35 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/music_thumb.jpg" alt="">
+                        <img src="img/artificial_cover.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                T Y T Y
+                                ARTIFICIAL FLAVOR
                             </h4>
                             <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/brutus">Click here for Soundcloud link!</a>
+                                <a href="https://soundcloud.com/tytytyty_bass/artificial-flavor">Click here for Soundcloud link!</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="img/against_cover.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>
+                                AGAINST THE CLOCK
+                            </h4>
+                            <p>
+                                <a href="https://soundcloud.com/tytytyty_bass/against-the-clock">Click here for Soundcloud link!</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="img/know_cover.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>
+                                KNOW
+                            </h4>
+                            <p>
+                                <a href="https://soundcloud.com/tytytyty_bass/knowwa">Click here for Soundcloud link!</a>
                             </p>
                         </div>
                     </div>
@@ -363,10 +385,10 @@
                         <img src="img/music_thumb.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                T Y T Y
+                                MORE TO COME!
                             </h4>
                             <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/brutus">Click here for Soundcloud link!</a>
+                                <a href="https://soundcloud.com/tytytyty_bass">Click here for Soundcloud link!</a>
                             </p>
                         </div>
                     </div>
@@ -374,32 +396,10 @@
                         <img src="img/music_thumb.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                T Y T Y
+                                MORE TO COME!
                             </h4>
                             <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/brutus">Click here for Soundcloud link!</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/music_thumb.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                T Y T Y
-                            </h4>
-                            <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/brutus">Click here for Soundcloud link!</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/music_thumb.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                T Y T Y
-                            </h4>
-                            <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/brutus">Click here for Soundcloud link!</a>
+                                <a href="https://soundcloud.com/tytytyty_bass">Click here for Soundcloud link!</a>
                             </p>
                         </div>
                     </div>
