--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="left-about">
                     <h4>What have I been up to...</h4>
                     <p>
-                       Having grown up a 'Wild West' land adjacent to Silicon Valley resulted in a equal exposure of nature and technology. Always curious about the interconnected workings of life. In my early years, I gained experience in the Management and Logistics industries, while simultaneously progressing my knowledge to the point where I broke my way into the industry as a Machine Learning Specialist. I'm convinced that there is no limit to the knowledge we can obtain and equally no limit to the level of progress we can acheieve and suffering we can alleviate. 
+                       Having grown up in a 'Wild West' land adjacent to Silicon Valley resulted in a equal exposure of nature and technology. Always curious about the interconnected workings of life. In my early years, I gained experience in the Management and Logistics industries, while simultaneously progressing my knowledge to the point where I broke my way into the industry as a Machine Learning Specialist. I'm convinced that there is no limit to the knowledge we can obtain and equally no limit to the level of progress we can acheieve and suffering we can alleviate. 
                        <br>
                     </p>
                     <div class="btn-con">
