added github link and added portfolio item

--- a/index.html
+++ b/index.html
@@ -216,20 +216,20 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/comp1.jpg" alt="">
+                        <img src="img/project_thumb_resize.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Machine Learning Car</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/tflannagan/MachineLearningGame" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
+                            </a> -->
+                            <!-- <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                         <img src="img/comp2.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>More Coming Soon!</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
@@ -257,7 +257,7 @@
                         <img src="img/phone3.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>More Coming Soon!</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
@@ -276,7 +276,7 @@
                         <img src="img/phone4.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>More Coming Soon!</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
@@ -295,7 +295,7 @@
                         <img src="img/text-wall.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>More Coming Soon!</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
@@ -314,7 +314,7 @@
                         <img src="img/keyboard1.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>More Coming Soon!</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
@@ -472,7 +472,7 @@
                                 <a href="#" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://github.com/tflannagan" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
                                 <a href="#" target="_blank">
