updated portfolio cover

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/project_thumb_resize.png" alt="">
+                        <img src="img/project_mL_thumb.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Machine Learning Car</h3>
