added mp4 video of ML project

--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a> -->
-                            <!-- <a href="#" class="icon">
+                            <a href="img/MLvideo.mp4" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a> -->
+                            </a>
                         </div>
                     </div>
                 </div>
