please work - updated colors

--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a> -->
-                            <a href="img/MLvideo.mp4" class="icon">
+                            <!-- <a href="" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -243,9 +243,9 @@
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
-                            </a>
+                            </a> -->
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
@@ -262,9 +262,9 @@
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
-                            </a>
+                            </a> -->
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
@@ -281,9 +281,9 @@
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
-                            </a>
+                            </a> -->
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
@@ -300,9 +300,9 @@
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
-                            </a>
+                            </a> -->
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
@@ -319,9 +319,9 @@
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
-                            </a>
+                            </a> -->
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
@@ -338,46 +338,46 @@
                 </div>
                 <div class="blogs">
                     <div class="blog">
-                        <img src="img/music_thumb.jpg" alt="">
+                        <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                BRUTUS
+                                Proxima II
                             </h4>
                             <p>
-                               <a href="https://soundcloud.com/tytytyty_bass/brutus">Click here for Soundcloud link!</a>
+                               <a href="https://soundcloud.com/tytytyty_bass/proxima-ii">Click here for Soundcloud link!</a>
                             </p>
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/artificial_cover.jpg" alt="">
+                        <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                ARTIFICIAL FLAVOR
+                                Altered
                             </h4>
                             <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/artificial-flavor">Click here for Soundcloud link!</a>
+                                <a href="https://soundcloud.com/tytytyty_bass/altered_synthwave">Click here for Soundcloud link!</a>
                             </p>
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/against_cover.jpg" alt="">
+                        <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                AGAINST THE CLOCK
+                                Aetherius
                             </h4>
                             <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/against-the-clock">Click here for Soundcloud link!</a>
+                                <a href="https://soundcloud.com/tytytyty_bass/aetherius">Click here for Soundcloud link!</a>
                             </p>
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/know_cover.jpg" alt="">
+                        <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                KNOW
+                                Silicone Sunset
                             </h4>
                             <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/knowwa">Click here for Soundcloud link!</a>
+                                <a href="https://soundcloud.com/tytytyty_bass/silicone-sunset-synthwave">Click here for Soundcloud link!</a>
                             </p>
                         </div>
                     </div>
