added more music

--- a/index.html
+++ b/index.html
@@ -382,13 +382,13 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/music_thumb.jpg" alt="">
+                        <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                MORE TO COME!
+                                Sacred Circles
                             </h4>
                             <p>
-                                <a href="https://soundcloud.com/tytytyty_bass">Click here for Soundcloud link!</a>
+                                <a href="https://soundcloud.com/tytytyty_bass/sacred-circles">Click here for Soundcloud link!</a>
                             </p>
                         </div>
                     </div>
