added song and changed data in about me

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">150+</p>
+                            <p class="large-text">15+</p>
                             <p class="small-text">Projects <br />Completed</p>
                         </div>
                     </div>
@@ -393,13 +393,13 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/music_thumb.jpg" alt="">
+                        <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                MORE TO COME!
+                                Losing Us
                             </h4>
                             <p>
-                                <a href="https://soundcloud.com/tytytyty_bass">Click here for Soundcloud link!</a>
+                                <a href="https://soundcloud.com/tytytyty_bass/losing-us">Click here for Soundcloud link!</a>
                             </p>
                         </div>
                     </div>
