--- a/index.html
+++ b/index.html
@@ -466,16 +466,16 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="www.facebook.com" target="_blank">
+                                <!-- <a href="www.facebook.com" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                                 <a href="#" target="_blank">
                                     <i class="fab fa-twitter"></i>
-                                </a>
+                                </a> -->
                                 <a href="https://github.com/tflannagan" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://www.youtube.com/channel/UCQqAu3rAruUhjyrePq5P6eg" target="_blank">
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
