changed the hero description headline

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="right-header">
                 <h1 class="name">
                     Hi, I'm <span>Ty Flannagan</span><br><br>
-                    <h2>Machine Learning, Sound Design, Creator.</h2>
+                    <h2>Listen, Analyze, Create.</h2>
                 </h1>
                 <p>
                     In love with the delicacies and subtle oscillations of life, driven by hope and sacrifice, feuled by data and information, hoping to make a substantial impact on the always changing and evolving world.
