--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     In love with the delicacies and subtle oscillations of life, driven by hope and sacrifice, feuled by data and information, hoping to make a substantial impact on the always changing and evolving world.
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="./assets/Ty's Resume (2022) (Update).pdf" class="main-btn">
                         <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
