--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="#" class="main-btn">
+                                <a href="./assets/Ty's Resume (2022) (Update).pdf" class="main-btn">
                                     <span class="btn-text">Download Resume</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
