--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
                 </div>
+                <div class="btn-con-live">
+                    <a href="https://tflannagan.github.io/Resume/" class="main-btn">
+                        <span class="btn-text">Live Resume</span>
+                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
@@ -50,7 +56,7 @@
                        <br>
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="./assets/Ty's Resume (2022) (Update).pdf" class="main-btn">
                             <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -208,7 +214,7 @@
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
-                <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
+                <h2>My <span>Work</span><span class="bg-text">My Work</span></h2>
             </div>
             <p class="port-text">
                 Here is some of my work...
