--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
-                    <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
+                    <h2>Contact <span>Me</span><span class="bg-text">Contact Me</span></h2>
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
@@ -453,7 +453,7 @@
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fas fa-user-graduate"></i>
+                                    <i class="fas fa-phone"></i>
                                     <span>Mobile Number:</span>
                                 </div>
                                 <p>
@@ -488,23 +488,25 @@
                         </div>
                     </div>
                     <div class="right-contact">
-                        <form action="" class="contact-form">
-                            <div class="input-control i-c-2">
-                                <input type="text" required placeholder="YOUR NAME">
-                                <input type="email" required placeholder="YOUR EMAIL">
-                            </div>
+                        <form id="fcf-form-id" class="input" method="post" action="./contact-form.php">
+                            <label for="Name" class="fcf-label"></label>
                             <div class="input-control">
-                                <input type="text" required placeholder="ENTER SUBJECT">
+                                <input type="text" id="Name" name="Name" class="fcf-form-control" required placeholder="YOUR NAME">
                             </div>
-                            <div class="input-control">
-                                <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
+                        <div class="input-control">
+                            <label for="Email" class="fcf-label"></label>
+                            <div class="fcf-input-group">
+                                <input type="email" id="Email" name="Email" class="fcf-form-control" required placeholder="EMAIL ADDRESS">
                             </div>
-                            <div class="submit-btn">
-                                <a href="./assets/Ty's Resume (2022) (Update).pdf" class="main-btn">
-                                    <span class="btn-text">Download Resume</span>
-                                    <span class="btn-icon"><i class="fas fa-download"></i></span>
-                                </a>
+                        <div class="input-control ">
+                            <label for="Message" class="fcf-label"></label>
+                            <div class="fcf-input-group">
+                                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required placeholder="ENTER MESSAGE HERE"></textarea>
                             </div>
+                        </div>
+                        <div class="input-control">
+                            <button type="submit" id="fcf-button" class="submit-btn">Send</button>
+                        </div>
                         </form>
                     </div>
                 </div>
