--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                         </div>
                     </div>
                     <div class="right-contact">
-                        <form id="fcf-form-id" class="input" method="post" action="./contact-form.php">
+                        <form id="fcf-form-id" class="input" method="post" action="contact-form.php">
                             <label for="Name" class="fcf-label"></label>
                             <div class="input-control">
                                 <input type="text" id="Name" name="Name" class="fcf-form-control" required placeholder="YOUR NAME">
