more form updates

--- a/index.html
+++ b/index.html
@@ -491,17 +491,17 @@
                         <form id="fcf-form-id" class="input" method="post" action="contact-form.php">
                             <label for="Name" class="fcf-label"></label>
                             <div class="input-control">
-                                <input type="text" id="Name" name="Name" class="fcf-form-control" required placeholder="YOUR NAME">
+                                <input type="text" id="Name" name="Name" class="input" required placeholder="YOUR NAME">
                             </div>
                         <div class="input-control">
                             <label for="Email" class="fcf-label"></label>
                             <div class="fcf-input-group">
-                                <input type="email" id="Email" name="Email" class="fcf-form-control" required placeholder="EMAIL ADDRESS">
+                                <input type="email" id="Email" name="Email" class="input" required placeholder="EMAIL ADDRESS">
                             </div>
                         <div class="input-control ">
                             <label for="Message" class="fcf-label"></label>
                             <div class="fcf-input-group">
-                                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required placeholder="ENTER MESSAGE HERE"></textarea>
+                                <textarea id="Message" name="Message" class="textarea" rows="6" maxlength="3000" required placeholder="ENTER MESSAGE HERE"></textarea>
                             </div>
                         </div>
                         <div class="input-control">
