fixed icons home page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="btn-con-live">
                     <a href="https://tflannagan.github.io/Resume/" class="main-btn">
                         <span class="btn-text">Live Resume</span>
-                        <span class="btn-icon"><i class="fas fa-computer-classic"></i></span>
+                        <span class="btn-icon"><i class="fas fa-computer"></i></span>
                     </a>
                 </div>
             </div>
