--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">15+</p>
+                            <p class="large-text">5+</p>
                             <p class="small-text">Projects <br />Completed</p>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Python</p>
+                        <p class="prog-title">Kotlin</p>
                         <div class="progress-con">
                             <p class="prog-text">70%</p>
                             <div class="progress">
