updated timeline section

--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
+                    <p class="tl-duration">2020-2022</p>
+                    <h5>Full Stack Web Developer<span> - AFI Technology Solutions</span></h5>
+                    <p>
+                        Rebuilt and maintained IT technology based website using ReactJS.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
                     <p class="tl-duration">2019 - 2020</p>
                     <h5>Division Supervisor<span> - UPS Freight</span></h5>
                     <p>
@@ -180,7 +190,8 @@
                         Responsible for the inventory and the team responsible for the maintainance of that inventory.
                     </p>
                 </div>
-                <div class="timeline-item">
+                
+                <!-- <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
@@ -189,7 +200,7 @@
                     <p>
                         Shipped freight through their proprietary environment and technology.
                     </p>
-                </div>
+                </div> -->
                 <!-- <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
