--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h2>Listen, Analyze, Create.</h2>
                 </h1>
                 <p>
-                    In love with the delicacies and subtle oscillations of life, driven by hope and sacrifice, feuled by data and information, hoping to make a substantial impact on the always changing and evolving world.
+                    Developer driven by hope and sacrifice, feuled by data and information, intending to make a substantial impact on the always changing and evolving world.
                 </p>
                 <div class="btn-con">
                     <a href="./assets/Ty's Resume (2022) (Update).pdf" class="main-btn">
