updated bio on about me page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ty Flannagan's Portfolio</title>
+    <title>Ty Flannagans Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
                     Developer driven by hope and sacrifice, feuled by data and information, intending to make a substantial impact on the always changing and evolving world.
                 </p>
                 <div class="btn-con">
-                    <a href="./assets/Ty's Resume (2022) (Update).pdf" class="main-btn">
+                    <a href="./assets/Flannagan Resume 2022.pdf" class="main-btn">
                         <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -52,11 +52,11 @@
                 <div class="left-about">
                     <h4>What have I been up to...</h4>
                     <p>
-                       Having grown up in a 'Wild West' land adjacent to Silicon Valley resulted in a equal exposure of nature and technology. Always curious about the interconnected workings of life. In my early years, I gained experience in the Management and Logistics industries, while simultaneously progressing my knowledge to the point where I broke my way into the data analysis industry. I'm convinced that there is no limit to the knowledge we can obtain and equally no limit to the level of progress we can acheieve and suffering we can alleviate. 
+                        Always curious about the interconnected workings of life. In my early years, I gained real world experience while simultaneously progressing my knowledge in the technology and computer domain. I'm in love with learning and finding new ways to solve problems with the tools at hand.  
                        <br>
                     </p>
                     <div class="btn-con">
-                        <a href="./assets/Ty's Resume (2022) (Update).pdf" class="main-btn">
+                        <a href="./assets/Flannagan Resume 2022.pdf" class="main-btn">
                             <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
