--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">5+</p>
-                            <p class="small-text">Projects <br />Completed</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <p class="large-text">5+</p>
                             <p class="small-text">Years of <br />Tech Experience</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
+                            <p class="large-text">3+</p>
+                            <p class="small-text">Years of <br />Management Experience</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
                             <p class="large-text">15+</p>
-                            <p class="small-text">Years of <br />Real World Experience</p>
+                            <p class="small-text">Years of <br />Work Experience</p>
                         </div>
                     </div>
                     <div class="about-item">
@@ -95,7 +95,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">html5</p>
                         <div class="progress-con">
-                            <p class="prog-text">95%</p>
+                            <p class="prog-text">90%</p>
                             <div class="progress">
                                 <span class="html"></span>
                             </div>
@@ -111,9 +111,9 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">javascript</p>
+                        <p class="prog-title">JavaScript</p>
                         <div class="progress-con">
-                            <p class="prog-text">80%</p>
+                            <p class="prog-text">75%</p>
                             <div class="progress">
                                 <span class="js"></span>
                             </div>
@@ -122,13 +122,13 @@
                     <div class="progress-bar">
                         <p class="prog-title">TypeScript</p>
                         <div class="progress-con">
-                            <p class="prog-text">75%</p>
+                            <p class="prog-text">60%</p>
                             <div class="progress">
                                 <span class="typescript"></span>
                             </div>
                         </div>
                     </div>
-                    <div class="progress-bar">
+                    <!-- <div class="progress-bar">
                         <p class="prog-title">Scala</p>
                         <div class="progress-con">
                             <p class="prog-text">60%</p>
@@ -136,8 +136,8 @@
                                 <span class="scala"></span>
                             </div>
                         </div>
-                    </div>
-                    <div class="progress-bar">
+                    </div> -->
+                    <!-- <div class="progress-bar">
                         <p class="prog-title">Kotlin</p>
                         <div class="progress-con">
                             <p class="prog-text">70%</p>
@@ -145,7 +145,7 @@
                                 <span class="python"></span>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <h4 class="stat-title">My Timeline</h4>
@@ -157,7 +157,7 @@
                     <p class="tl-duration">2021 - present</p>
                     <h5>Machine Learning Data Specalist<span> - Affirma Consulting LLC.</span></h5>
                     <p>
-                        Worked along side an incredible team on a contract with Microsoft to build an adaptive, learning model with the ability to communicate with a user. 
+                        Work as an analyst on a language-based productivity application for Microsoft Office products such as Outlook and Excel. Analyzed and used a wide range of methods to correct the predictions for a language based model in a machine learning context. Collaborated using tools such as GitHub and VS Code to build and deploy code.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -167,7 +167,7 @@
                     <p class="tl-duration">2020-2022</p>
                     <h5>Full Stack Web Developer<span> - AFI Technology Solutions</span></h5>
                     <p>
-                        Rebuilt and maintained IT technology based website using ReactJS.
+                        Main developer responsible for building and maintaining a dynamic technology orientated website using the React framework and TailwindCSS.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -177,7 +177,7 @@
                     <p class="tl-duration">2019 - 2020</p>
                     <h5>Division Supervisor<span> - UPS Freight</span></h5>
                     <p>
-                       Worked with a team of individuals to service thousands of recipients on the West Coast.
+                        Lead a team of individuals in a high paced, high-energy environment and used metrics to track and help provide my team with more efficient ways of productivity. 
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -187,7 +187,7 @@
                     <p class="tl-duration">2013 - 2014</p>
                     <h5>Lead Inventory Analyst<span> - TEC Equipment</span></h5>
                     <p>
-                        Responsible for the inventory and the team responsible for the maintainance of that inventory.
+                        Maintained and managed a commercial sized inventory by implementing new procedures and dispatching warehouse runners. Daily activities included front counter part sales and all shipping duties required to maintain a healthy inventory. Worked together with a team to supply and repair commercial sized transportation equipment. Helped customers daily with a wide range of issues.
                     </p>
                 </div>
                 
