upload mealpicker link and img

--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/comp2.jpg" alt="">
+                        <img src="img/imageMealPickerHero.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>More Coming Soon!</h3>
+                        <h3>Meal Picker</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/tflannagan/MealPicker" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <!-- <a href="#" class="icon">
